--- a/src/Components/Common/Form/PasswordInput/PasswordInput.scss
+++ b/src/Components/Common/Form/PasswordInput/PasswordInput.scss
@@ -1,8 +1,36 @@
-.password-input-component{
-    height: 35px;
-    padding-right: 10px;
-    &::placeholder{
-        margin-right: 20px;
-        font-size: 14px;
+.input-component-frame{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    .input-component-holder{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        .password-input-component{
+            height: 40px;
+            padding-right: 37px;
+            width: 250px;
+            &::placeholder{
+                margin-right: 20px;
+                font-size: 14px;
+            }
+        }
+        .show-password-icon{
+            width: 2.2%;
+            height: 2.2%;
+            position: absolute;
+            margin-top: 15px;
+            margin-right: -210px;
+        }    
     }
+    .error-message-password-input{
+        color:rgb(200, 14, 14);
+        font-size: 10px;
+        margin-top: 5px;
+        font-weight: normal;
+        display: flex;
+        justify-content: flex-start;
+    }
+
 }
+
