--- a/src/Styles/AuthPages/Auth.scss
+++ b/src/Styles/AuthPages/Auth.scss
@@ -36,6 +36,12 @@
             justify-content: center;
             margin-bottom: 10px;
         }
+        .login-component-button-holder{
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            margin-top: 70px; 
+        }
         
     }
 }
