--- a/src/Components/Common/Form/TextInput/TextInput.scss
+++ b/src/Components/Common/Form/TextInput/TextInput.scss
@@ -7,6 +7,8 @@
         height: 40px;
         padding-right: 37px;
         width: 250px;
+        border:0px 0px 1px 0px;
+        background-color: white !important;
         &::placeholder{
             margin-right: 20px;
             font-size: 14px;
