--- a/src/Styles/ProductTables/ProductTables.scss
+++ b/src/Styles/ProductTables/ProductTables.scss
@@ -1,3 +1,14 @@
+.page-container{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin:30px;
+    .navigation-frame{
+        display: flex;
+        justify-content: flex-start;
+
+    }
+}
 .table-component-holder {
     display: flex;
     justify-content: center;
